--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
     "react-redux": "^8.1.3",
     "swiper": "^10.3.1"
   },
