--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.5.4",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "swiper": "^10.3.1"
   },
