--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@types/lodash": "^4.14.199",
+    "@types/swiper": "^6.0.0",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
