--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/js-cookie": "^3.0.5",
     "@types/lodash": "^4.14.199",
     "@types/swiper": "^6.0.0",
     "axios": "^1.5.1",
