--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier -w ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/js-cookie": "^3.0.5",
     "@types/lodash": "^4.14.199",
@@ -22,11 +23,13 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
-    "swiper": "^9.0.4"
+    "swiper": "^9.0.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
