--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "life",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier -w ."
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@types/js-cookie": "^3.0.5",
-    "@types/lodash": "^4.14.199",
-    "@types/swiper": "^6.0.0",
-    "axios": "^1.5.1",
-    "classnames": "^2.3.2",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "next": "13.5.4",
-    "next-redux-wrapper": "^8.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.47.0",
-    "react-icons": "^4.11.0",
-    "react-intersection-observer": "^9.5.2",
-    "react-query": "^3.39.3",
-    "react-redux": "^8.1.3",
-    "swiper": "^9.0.4",
-    "yup": "^1.3.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
-    "sass": "^1.68.0",
-    "typescript": "^5"
-  }
+	"name": "life",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"start": "concurrently  \"npm run dev\"",
+		"dev": "next dev",
+		"build": "next build",
+		"lint": "next lint",
+		"format": "prettier -w ."
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.3.2",
+		"@reduxjs/toolkit": "^1.9.7",
+		"@types/js-cookie": "^3.0.5",
+		"@types/lodash": "^4.14.199",
+		"@types/swiper": "^6.0.0",
+		"axios": "^1.5.1",
+		"classnames": "^2.3.2",
+		"dotenv": "^16.3.1",
+		"json-server": "^0.17.4",
+		"lodash": "^4.17.21",
+		"moment": "^2.29.4",
+		"next": "13.5.4",
+		"next-redux-wrapper": "^8.1.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.47.0",
+		"react-icons": "^4.11.0",
+		"react-intersection-observer": "^9.5.2",
+		"react-query": "^3.39.3",
+		"react-redux": "^8.1.3",
+		"swiper": "^9.0.4",
+		"yup": "^1.3.2"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"concurrently": "^8.2.2",
+		"eslint": "^8",
+		"eslint-config-next": "13.5.4",
+		"sass": "^1.68.0",
+		"typescript": "^5"
+	}
 }
