--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-hook-form": "^7.47.0",
 		"react-icons": "^4.11.0",
 		"react-intersection-observer": "^9.5.2",
+		"react-loading-skeleton": "^3.3.1",
 		"react-query": "^3.39.3",
 		"react-redux": "^8.1.3",
 		"swiper": "^9.0.4",
