--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.2",
 		"@reduxjs/toolkit": "^1.9.7",
+		"@types/firebase": "^3.2.1",
 		"@types/js-cookie": "^3.0.5",
 		"@types/lodash": "^4.14.199",
 		"@types/swiper": "^6.0.0",
 		"axios": "^1.5.1",
 		"classnames": "^2.3.2",
 		"dotenv": "^16.3.1",
+		"firebase": "^10.7.1",
 		"json-server": "^0.17.4",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
