--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"classnames": "^2.3.2",
 		"dotenv": "^16.3.1",
 		"firebase": "^10.7.1",
+		"js-cookie": "^3.0.5",
 		"json-server": "^0.17.4",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
