--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"json-server": "^0.17.4",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
-		"next": "13.5.4",
+		"next": "^14.2.2",
 		"next-redux-wrapper": "^8.1.0",
 		"react": "^18",
 		"react-dom": "^18",
