--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/lodash": "^4.14.199",
 		"@types/swiper": "^6.0.0",
 		"axios": "^1.5.1",
+		"bcryptjs": "^2.4.3",
 		"classnames": "^2.3.2",
 		"dotenv": "^16.3.1",
 		"firebase": "^10.7.1",
